fix: footer, fix CSS styles so safe buy link doesn't cause overflow in mobile view && making room at the bottom for  accommodating the PDPs add-to-cart-button

--- a/styles/css/footer/vtex.store-footer.css
+++ b/styles/css/footer/vtex.store-footer.css
@@ -2,6 +2,7 @@
   background-color: #181818;
   border-top: 4px solid #a2dd30;
   padding: 0 5%;
+  padding-bottom: 140px;
 }
 
 @media screen and (max-width: 1024px) {
